# rust-ytmusic-cli

./: .gitignore  Cargo.toml  README.md  ytmusic-cli-README.md
src/: app.rs  main.rs  tui.rs
src/services/: cache.rs  lyrics.rs  mod.rs  music.rs  player.rs  storage.rs
src/types/: lyrics.rs  mod.rs  playlist.rs  track.rs
src/ui/: mod.rs
